completed mobile version, there is an issue with the first row gap

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     --Dark-blue: hsl(235, 46%, 20%);
     --Desaturated-blue: hsl(235, 45%, 61%);
     --Pale-Blue: hsl(236, 100%, 87%) ;
-    --k: #259be2
+    --k: #5746ea;
 }
 *{
     margin: 0;
@@ -28,7 +28,8 @@ body{
 .main{
     display:grid;
     grid-template-columns: 24px 1fr 24px;
-    grid-template-rows: repeat(7,1fr);
+    grid-template-rows: 1fr repeat(6,160px);
+    grid-row-gap: 24px;
     padding-top: 80px;
 }
 .main>div{
@@ -42,9 +43,9 @@ body{
     grid-row: 1/2;
     padding:1.5rem;
 }
-.card-front,.card-back{
+/* .card-front,.card-back{
     margin-bottom: 1rem;    
-}
+} */
 .card-front img{
     grid-row-end:2;
     border:3px solid white;
@@ -129,16 +130,26 @@ h1{
 .front .right-top, .front .right-bottom{
     color:white;
 }
+.right-bottom{
+    margin-top: 14px;
+}
+.left-bottom{
+    font-size: xx-large;
+    font-weight: 300;
+}
 .front{
     background-color: var(--Dark-blue);
-    height:60%;
-    align-self: end;
+    height: 124px;
+    align-self: self-end;
     padding: 1rem;
+    align-items: center;
 }
 .back{
     margin-bottom: 20px;
     position: relative;
     z-index: -1;
+    height:163px;
+    align-self: self-end;
 
 
 }
@@ -161,10 +172,11 @@ h1{
     float:left;
 }
 .right{
-    font-size: smaller;
+    font-size: smaller
+    ;
     float:right;}
 .front img{
-width: 40px;}
+width: 20px;}
 .front{
     overflow-y: hidden;
 }
